--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -28,6 +28,10 @@ ul
 	transition-duration: 200ms
 	transition-property: background-color
 
+.page_blurred
+	filter: blur(12px)
+	transition: all 600ms ease-in-out
+
 .page__sidebar
 	position: fixed
 	left: 0
@@ -281,6 +285,84 @@ ul
 
 .planner-page__added-icon
 	width: 20px
+
+.detailed
+	position: fixed
+	left: 0
+	top: 0
+	z-index: 1000
+	width: 100%
+	height: 100%
+	animation-name: detailed
+	animation-delay: 400ms
+	animation-duration: 200ms
+	animation-fill-mode: both
+	animation-timing-function: ease-in-out
+
+@keyframes detailed
+	from
+		transform: scale(1.08)
+		opacity: 0
+	to
+		transform: scale(1)
+		opacity: 1
+
+.detailed__content
+	height: 100%
+	padding: 80px 10px 160px 10px
+	box-sizing: border-box
+	overflow-y: scroll
+	
+.detailed-content
+	max-width: 640px
+	margin: 0 auto
+
+.detailed-content__picture
+.detailed-picture
+.detailed-picture__front-side
+	margin-bottom: 10px
+
+.detailed-picture__back-side
+.detailed-picture__image
+	display: block
+	
+.detailed-content__data
+.detailed-content__name,
+.detailed-content__price
+	display: flex
+	align-items: flex-end
+	height: 50px
+	font-size: 21px
+	font-weight: 600
+	text-transform: uppercase
+
+.detailed-content__description
+	line-height: 1.3
+
+.detailed-content__price>span
+	transform: translate(-14px,2px)
+	
+.detailed-content__add
+	margin-top: 10px
+
+.detailed-content__button
+	display: flex
+	align-items: center
+	justify-content: center
+	width: 200px
+	height: 40px
+	border: none
+	border-radius: 3px
+	font-size: 18px
+	font-weight: 400
+	text-transform: uppercase
+	color: white
+	background-color: rgb(65,185,76)
+	cursor: pointer
+	transition: background-color 200ms
+	
+.detailed-content__button_remove
+	background-color: rgb(238,0,0)
 
 /* ночной режим */
 
