add total block

--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -275,7 +275,9 @@ ul
 	font-size: 14px
 
 .planner-page__price
-.planner-page__price>span
+.planner-page__price>span,
+.ruble-stroke_regular
+	display: inline-block
 	transform: translate(-12px,2px)
 	
 .planner-page__status
@@ -363,6 +365,23 @@ ul
 	
 .detailed-content__button_remove
 	background-color: rgb(238,0,0)
+
+.total
+	position: fixed
+	right: 20px
+	bottom: 20px
+	padding: 20px
+	border-radius: 3px
+	font-weight: 300
+	color: white
+	background-color: rgba(0,0,0,0.75)
+
+.total__title
+	font-size: 14px
+
+.total__value
+	font-size: 18px
+	font-weight: 400
 
 /* ночной режим */
 
