remove hover effects on mobile

--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -288,6 +288,15 @@ ul
 .planner-page__added-icon
 	width: 20px
 
+.mobile,
+.tablet
+	.planner-page__picture:hover>.planner-page__images
+		transform: rotateY(0)
+	.planner-page__icons
+		opacity: 1
+	.planner-page__picture:hover .planner-page__icons
+		transform: translateY(-20px)
+
 .detailed
 	position: fixed
 	left: 0
