--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -170,7 +170,7 @@ ul
 	border-bottom: 1px solid rgba(0,0,0,0.06)
 	box-sizing: border-box
 	line-height: 1
-	font-size: 18px
+	font-size: 20px
 	font-weight: 600
 	text-transform: uppercase
 	
@@ -200,6 +200,7 @@ ul
 	transform: rotateY(180deg)
 
 .planner-page__front-side
+	background-color: white
 	backface-visibility: hidden
 
 .planner-page__back-side
@@ -207,6 +208,7 @@ ul
 	left: 0
 	top: 0
 	width: 100%
+	background-color: white
 	backface-visibility: hidden
 	transform: rotateY(180deg)
 
@@ -282,8 +284,8 @@ ul
 	
 .planner-page__status
 	position: absolute
-	right: 0
-	top: 0
+	right: 5px
+	top: 3px
 
 .planner-page__added-icon
 	width: 20px
@@ -331,9 +333,11 @@ ul
 .detailed-content__picture
 .detailed-picture
 .detailed-picture__front-side
+	background-color: white
 	margin-bottom: 10px
 
 .detailed-picture__back-side
+	background-color: white
 .detailed-picture__image
 	display: block
 	
@@ -343,7 +347,7 @@ ul
 	display: flex
 	align-items: flex-end
 	height: 50px
-	font-size: 21px
+	font-size: 23px
 	font-weight: 600
 	text-transform: uppercase
 
@@ -351,7 +355,7 @@ ul
 	line-height: 1.3
 
 .detailed-content__price>span
-	transform: translate(-14px,2px)
+	transform: translate(-15px,2px)
 	
 .detailed-content__add
 	margin-top: 10px
