add free pages style

--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -272,6 +272,10 @@ ul
 	font-weight: 600
 	text-transform: uppercase
 
+.planner-page__price_base
+	font-weight: 400
+	opacity: 0.5
+
 .planner-page__description
 	line-height: 1.3
 	font-size: 14px
@@ -413,12 +417,12 @@ ul
 			color: white
 
 	.category__title
-		font-weight: 400
+//		font-weight: 400
 		border-color: rgba(255,255,255,0.1)
 
 	.planner-page__name,
 	.planner-page__price
-		font-weight: 400
+//		font-weight: 400
 
 /* крупная сетка */
 
