add radio buttons logic

--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -256,6 +256,9 @@ ul
 	opacity: 0
 	transform: rotate(45deg)
 
+.added .planner-page__add_radio
+	transform: scale(1.25)
+
 .added .planner-page__remove
 	opacity: 1
 	transform: rotate(45deg)
@@ -382,6 +385,9 @@ ul
 	
 .detailed-content__button_remove
 	background-color: rgb(238,0,0)
+
+.detailed-content__button_added
+	background-color: rgba(0,0,0,0.5)
 
 .total
 	position: fixed
